Bug 116796 - UI: Cancel button missing on dialog Confirmation replacing already installed extension
Summary: UI: Cancel button missing on dialog Confirmation replacing already installed ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.0.2.1 release
Hardware: All All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-04 14:20 UTC by Cor Nouws
Modified: 2018-04-10 07:26 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screen print of dialog (25.64 KB, image/png)
2018-04-04 14:20 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2018-04-04 14:20:24 UTC
Created attachment 141082 [details]
screen print of dialog

Install extension
Get newer version
Install that one
LibreOffice asks if the installed should be replaced, offering Cancel
  > No cancel available
Comment 1 Cor Nouws 2018-04-04 14:20:48 UTC
found in Version: 6.1.0.0.alpha0+
Build ID: 96300e3292217a7c1f3ab2a302be7c7ace445e81
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-04-03_17:42:07
Locale: nl-NL (nl_NL.UTF-8); Calc: group
Comment 2 Timur 2018-04-04 17:36:09 UTC
True. But since you can close the dialog which cancels it, it's trivial. New.
Comment 3 Xisco Faulí 2018-04-05 17:14:13 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-02-19 16:33:35 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-02-22 22:07:38 +0100
commit 6a4c464b49dbfa2801818ead1b50bc9580824d00 (patch)
tree 3d6381b6b13576bc536670992b36784436486e95
parent f7733528e88a6619f82b54b59e92a9bca72c0a89 (diff)
weld native message dialogs
just the straight-forward MessageDialog cases first

a) remove border_width from message dialog .ui so as to take
the default border width
b) retain 12 as default message dialog border for vcl widget case
c) remove layour_style from message dialog button boxes so as to
take the default mode (a no-op for vcl widget case)
d) use gtk response ids (vcl builder will converts to vcl ones)

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara

For the test, I used this extension: https://sourceforge.net/projects/texmaths/files/
Comment 4 Commit Notification 2018-04-05 22:46:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d39a8e791618a40328c0f90bece3cc246dcf57f7

Resolves: tdf#116796 Ok -> OkCancel

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-04-10 07:26:41 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 0a4c1fb68c3619e61099a7c548f550b0d3fd7a53
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Caolán, thanks for fixing this!