Resolves: tdf#116796 Ok -> OkCancel

Change-Id: Ib816862a462614a47045628ffe57358a4986149b